mshv: Expose VM partition ID
